Styling fix, actionbar too big.

--- a/public/vi.less
+++ b/public/vi.less
@@ -631,7 +631,7 @@ background-color:#d6d6d6;
 /* #actionbar
 ================================================== */
 .vi_operator .actionbar {
-  width: 97%;
+  width: 83%;
   /*min-width: 500px;*/
   position: fixed; /* Issue VI-20 */
   margin-top: -105px;
